<resources>
    <string name="app_name">Yalla-Passanger Sudan</string>
    <string name="title_activity_main">Map</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="yourTrips">Your Trips</string>
    <string name="FreeRides">FreeRides</string>
    <string name="Settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Home">Home</string>
    <string name="userLoginal">This user login in another phone </string>

    <string name="profile">Profile</string>
    <string name="Logout">Logout</string>
    <string name="Paymentmethod">Payment Method</string>
    <string name="Cash">Cash</string>
    <string name="Wantmore">Want More Yalla For Less ?</string>
    <string name="getfreeride">Get a free ride worth up to 30 SDG when you refer  a friend to try Yalla</string>
    <string name="howtoinvite">How Invites Work</string>
    <string name="yourinvite">Your Invite Code</string>
    <string name="copy">Copy</string>
    <string name="Sendinvites">Send invites</string>
    <string name="picklocation">PickUp location</string>
    <string name="ridenow">Ride Now</string>
    <string name="rideLater">Ride Later</string>
    <string name="usemoneyfromwallet">Use money from wallet to pay for your trips</string>
    <string name="wallet">Wallet</string>
    <string name="Mini">MINI</string>
    <string name="MAX">MAX</string>
    <string name="BUISNESS">BUSINESS</string>
    <string name="DELEVERY">DELEVERY</string>
    <string name="favourite">Favourite</string>
    <string name="promotion">Promotion</string>
    <string name="fare">Fare</string>
    <string name="about">About</string>
    <string name="changelang">Change language</string>
    <string name="changepass">Change password</string>
    <string name="password">Password</string>
    <string name="Phone">Phone</string>
    <string name="forgetpass">FORGET PASSWORD ?</string>
    <string name="signin">SIGN IN</string>
    <string name="login">Login</string>
    <string name="signup">Signing Up</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="Fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="Email">E-Mail</string>
    <string name="details">Details</string>
    <string name="fare_txt">Fare</string>
    <string name="base_fare">Base Fare</string>
    <string name="min_fare">Mininum fare</string>
    <string name="below">Below</string>
    <string name="above">Above</string>
    <string name="even_charge">evening charge</string>
    <string name="nit_fare">Night fare</string>
    <string name="requestingcar">Requesting car .. please wait</string>
    <string name="submit">Submit</string>
    <string name="Drivesyouhappy">Drives you happy</string>
    <string name="RateOnGooglePlay">Rate us on Google play</string>
    <string name="Likeusonface">Like us on Facebook</string>
    <string name="Legal">Legal</string>
    <string name="Call">Call Driver</string>
    <string name="esTripTime">Approximate arrival time</string>
    <string name="lbl_enter_otp">Enter Code</string>
    <string name="msg_sit_back">Please wait ...You will recive the code soon</string>
    <string name="cash">Cach</string>
    <string name="credit">Credit</string>
    <string name="enteryourpass">Enter your old password</string>
    <string name="enternewpass">Enter your new password</string>
    <string name="done">Done</string>
    <string name="enteryourphonenum">Enter your phone number to change the password</string>
    <string name="mobile_num_hint">Mobile number</string>
    <string name="plzenteryourdroplocation">Please enter your drop place</string>
    <string name="Current_location">Current location</string>
    <string name="yes">Yes</string>
    <string name="chooseDropLocation">Choose drop location</string>
    <string name="choosepickLocation">Choose pickup location</string>
    <string name="tripcompleted">Trip completed successfully</string>
    <string name="backtomain">Back to main screen</string>
    <string name="RateDriver">Rate driver now</string>
    <string name="followuson">Follow us on</string>
    <string name="email_exist">Email Already Exist</string>
    <string name="phone_exist">Phone Already Exist</string>
    <string name="choosePayment">Choose Payment</string>
    <string name="EnterYourPassAndNum">"Enter your password and number "</string>
    <string name="LOADING">Loading</string>
    <string name="youwanttocancelthetrip">Would you like to cancel this trip?</string>
    <string name="youareintripnow">You are in trip now</string>
    <string name="nocaravalible">No vehicle available</string>
    <string name="Cancel_Fare">Cancel Fare</string>
    <string name="edit_profile">edit</string>
    <string name="sname">First Name</string>
    <string name="title">Title</string>
    <string name="SiningIN">SignIn ...</string>
    <string name="loginsucceeded">login success </string>
    <string name="thereisanerror">There is an error .. try again</string>
    <string name="mr">Mr</string>
    <string name="mrs">Mrs</string>
    <string name="SaveChanges">Save Changes</string>
    <string name="Profilesuccessfullymodified">Profile successfully modified</string>
    <string name="pleaseWait">Please wait</string>
    <string name="invalidVericationCode">Invalid Verification Code.Please try again</string>
    <string name="AccountCreated">Account created .. you can login now</string>
    <string name="Favouriteplacealreadyexists">Favourite place already exists for this type</string>
    <string name="Placesaved">Place saved successfully</string>
    <string name="comments">Comments</string>
    <string name="notes">Notes</string>
    <string name="driverinfo">Driver info</string>
    <string name="adfMoneytoWallet">Add Money</string>
    <string name="tripinfo">Trip History</string>
    <string name="AreYou">Are you sure .. you want leave the app ?</string>
    <string name="areyousure">"Are you sure ? "</string>
    <string name="arrivallocation">Arrival location</string>
    <string name="duration">Duration</string>
    <string name="totalCost">Total Cost</string>
    <string name="Message">"Message "</string>
    <string name="PasswordsendbySMS">Password send by sms</string>
    <string name="entermoneyamount">Enter card number</string>
    <string name="fontstring">fonts/Montserrat-Regular.ttf</string>
    <string name="no">No</string>
    <string name="min">min</string>
    <string name="passwordwrong">Password wrong</string>
    <string name="watingtime">Waiting time </string>
    <string name="distance">Distance</string>
    <string name="itemdeleted">Place deleted successfully</string>
    <string name="menu_favourites">Favourites</string>
    <string name="office">office</string>
    <string name="airport">Air port</string>
    <string name="others">others</string>
    <string name="dialog_okk">Ok</string>
    <string name="homefav">Home</string>
    <string name="passengerintrip">Passenger in trip</string>
    <string name="passengercancelthetrip">Passenger cancel the trip </string>
    <string name="yourTripHasbeenStarted">Your trip has been started</string>
    <string name="yourcarHasbeenarrived">Your car has been arrived</string>
    <string name="YourTripConfirmed">Your trip has been confirmed</string>
    <string name="yourTripHasbeenCompleted">Your trip has been completed</string>
    <string name="tripfareupdated">Trip fare updated</string>
    <string name="rateupdated">Rate updated</string>
    <string name="AllDriversbusy">All drivers busy</string>
    <string name="rateDriver">Rate Driver</string>
    <string name="dialog_cancell">Cancel</string>
    <string name="LEAVEAPP">LAEVE APP NOW !</string>
    <string name="invalidpromocode">Invalid promo code</string>
    <string name="Promocodenotstarted">Promo code not started yet</string>
    <string name="promocodeexpired">Your promo code is expired</string>
    <string name="incalidpromocodecity">Invalid promocode city</string>
    <string name="userblocked">User blocked</string>
    <string name="enterpromocode">Enter promocode (Optional)</string>
    <string name="expectedtype">Trip information</string>
    <string name="expectedtimeis">The estimated time and distance of arrival</string>
    <string name="getNewCode">Get new Code ?</string>
    <string name="newCodeSent">New code sent</string>
    <string name="voucherNumberNotFound">Voucher Number Not Found</string>
    <string name="voucherexpired">VOUCHER EXPIRED</string>
    <string name="voucheralredyused">VOUCHER ALREADY USED</string>
    <string name="voucherblocked">Voucher Blocked</string>
    <string name="MoneyAddedToWallet">Money added successfully</string>
    <string name="accountdeactivated">Profile is not enabled</string>
    <string name="oldpassnotcorrect">"Old password not true "</string>
    <string name="passchange">Password changed successfully</string>
    <string name="phonenotexist">Phone not exist</string>
    <string name="promocodelimitexceed">Promo code limit exceeded</string>
    <string name="driverAcceptthetrip">Driver accepted the trip</string>
    <string name="Ref_code_not_exist">Referral code not exist</string>
</resources>
