<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
<LinearLayout android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="10dp"
    android:orientation="vertical"
    android:gravity="center_vertical"
   >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearSignUp"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></FrameLayout>
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/loooooosogooo"

            />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="text"
                android:hint="@string/Fname" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="text"
                android:hint="@string/lname" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:hint="@string/Email" />
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            >
            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:defaultNameCode="sd"
                android:layout_marginTop="15dp"
                app:customMasterCountries="sd,sa,eg,us"
                app:ccpLanguage="ENGLISH"

                />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="0dp"
                android:layout_weight=".8"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="number"
                    android:hint="@string/Phone" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"

            >

            <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_password"
                android:hint="@string/password"
                />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            >
            <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_repassword"
                android:hint="@string/confirmpassword"
                />
        </android.support.design.widget.TextInputLayout>

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp"
            fancy:fb_borderColor="#FFFFFF"
            fancy:fb_borderWidth="1dp"
            android:onClick="goToCode"
            android:layout_gravity="center"
            fancy:fb_defaultColor="@color/colorPrimary"
            fancy:fb_focusColor="@color/Wheat"
            fancy:fb_fontIconResource="&#xf090;"
            fancy:fb_iconPosition="left"
            fancy:fb_radius="5dp"
            fancy:fb_text="@string/signup"
            fancy:fb_textColor="#FFFFFF" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_otp_sms"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:orientation="vertical">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/loooooosogooo" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/msg_sit_back"
            android:textColor="@android:color/black"
            android:textSize="16dp" />



        <EditText
            android:id="@+id/inputOtp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:hint="@string/lbl_enter_otp"
            android:inputType="number"
            android:maxLength="6"
            android:padding="10dp"
            android:textColor="@color/Wheat"
            android:textColorHint="@color/Wheat"
            android:textCursorDrawable="@null"
            android:textSize="18dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/getNewCode"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:onClick="GetNewCode"
            android:textColor="@color/red1"
            />

        <Button
            android:id="@+id/btn_verify_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@color/colorPrimaryDark"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/submit"
            android:onClick="choosePaymentMethod"
            android:textColor="@android:color/white"
            android:textSize="14dp" />

    </LinearLayout>
</LinearLayout>
</ScrollView>