<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:fancy="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_margin="16dp">
    <com.victor.loading.rotate.RotateLoading
        android:id="@+id/rotateloading"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:loading_width="5dp"
        app:loading_color="@color/colorPrimary"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearChangePasss"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"

            >


            <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_old_password"
                android:hint="@string/enteryourpass"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            >
            <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_password"
                android:hint="@string/enternewpass"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btn_change_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="15dp"
        fancy:fb_borderColor="#FFFFFF"
        fancy:fb_borderWidth="1dp"
        fancy:fb_textFont="@string/fontstring"
        android:layout_gravity="center"
        fancy:fb_defaultColor="@color/colorPrimary"
        fancy:fb_focusColor="@color/Wheat"
        fancy:fb_radius="2dp"
        fancy:fb_text="@string/done"
        fancy:fb_textColor="#FFFFFF" />
</LinearLayout>
