<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:background="@color/Wheat"
    >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/FreeRides"
                android:textColor="@color/Wheat"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                />
        </FrameLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      xmlns:tools="http://schemas.android.com/tools"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_marginTop="70dp"
                      android:orientation="vertical"
                      android:layout_marginLeft="16dp"
                      android:layout_marginRight="16dp"
                      tools:context="com.asi.yalla_passanger_eg.Fragments.Paymant">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Wantmore"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/getfreeride"
                android:textSize="17sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/tintblack"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/howtoinvite"
                android:textSize="17sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorPrimary"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/freeride"
                android:layout_gravity="end"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yourinvite"
                android:textSize="17sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/tintblack"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:background="@drawable/border"
                android:weightSum="1"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".8"
                    android:layout_height="wrap_content"
                    android:text="WE12Zxz"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:textColor="@color/black"

                    android:textSize="18sp"
                    android:layout_margin="10dp"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".2"
                    android:layout_height="wrap_content"
                    android:text="@string/copy"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    />
            </LinearLayout>

            <mehdi.sakout.fancybuttons.FancyButton

                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="1dp"
                android:layout_gravity="center"
                fancy:fb_defaultColor="@color/black"
                fancy:fb_focusColor="#fff"
                fancy:fb_iconPosition="left"
                fancy:fb_radius="3dp"
                fancy:fb_text="@string/Sendinvites"
                fancy:fb_textColor="#FFFFFF"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="150dp"
                />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>



