<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="10dp"
        android:orientation="vertical"
        android:gravity="center_vertical"

        tools:context="com.asi.yalla.Login">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/loooooosogooo"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="number"
                android:hint="@string/Phone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"

            >

            <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_password"
                android:hint="@string/password"
                />

        </android.support.design.widget.TextInputLayout>

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp"
            fancy:fb_borderColor="#FFFFFF"
            fancy:fb_borderWidth="1dp"
            android:layout_gravity="center"
            fancy:fb_defaultColor="@color/colorPrimary"
            fancy:fb_focusColor="@color/Wheat"
            fancy:fb_fontIconResource="&#xf090;"
            fancy:fb_iconPosition="left"
            fancy:fb_radius="5dp"
            fancy:fb_text="@string/signin"
            fancy:fb_textColor="#FFFFFF" />
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgetpass"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:onClick="goToForgetPass"
            android:textColor="@color/red"
            android:textAlignment="center"
            android:textSize="18sp"
            android:id="@+id/tv_forget_pass"
            />
    </LinearLayout>
</FrameLayout>

