<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_marginTop="16dp"
                  android:orientation="vertical"
                  android:layout_marginLeft="16dp"
                  android:layout_marginRight="16dp"
                  tools:context="com.asi.yalla_passanger_eg.Fragments.Paymant">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Paymentmethod"
            android:textSize="17sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="1.8"
            >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight=".4"
                android:src="@drawable/cashicon"

                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.4"
                android:text="@string/Cash"
                android:textColor="@color/black"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="1.8"
            >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight=".4"
                android:src="@drawable/mastercard"

                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.4"
                android:text="@string/credit"
                android:textColor="@color/black"
                />
        </LinearLayout>


    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>



